# panxor

./: .gitignore  LICENSE  README.md  panxor.cabal
doc/: Makefile  build.sh  intro.tex  panxor.tex
src/: Makefile  panxor.lhs
src/PANXOR/: Core.lhs  Meta.lhs  Option.lhs  Util.lhs
